	numeric (aka double); previously only integer weights were
	coerced.  Zero weights are handled specially so an infinite
	value with zero weight does not force an NaN result.

	There is now a "difftime" method.
	
    o	bug.report() now has 'package' and 'lib.loc' arguments to
	generate bug reports about packages.  When this is used, it
	looks for a BugReports entry in the package DESCRIPTION file,
	which will be assumed to be a URL at which to submit the
	report, and otherwise generates an email to the package
	maintainer.  (Suggested by Barry Rowlingson.)


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)

    o	Adding/subtracting a "difftime" object to/from a "POSIXt" or
	"Date" object works again (it was broken by the addition of
	Ops.difftime).




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
	--no-help, --no-demo, --no-exec, and --no-inst to suppress
	installation of the specified part of the package.  These are
	intended for special purposes (e.g. building a database
	of help pages without fully installing all packages).


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff