@@ -228,6 +228,7 @@ S3method(proj, aovlist)
 S3method(proj, default)
 S3method(proj, lm)
 S3method(quantile, default)
+S3method(quantile, POSIXt)
 S3method(relevel, default)
 S3method(relevel, factor)
 S3method(relevel, ordered)
